# DIT356-Mini-Project-Distributed-Systems-Development

./: README.md
admin-ui/: package-lock.json  package.json  vite.config.js
api-gateway/: .dockerignore  .gitlab-ci.yml  Dockerfile  README.md  app.js  package-lock.json  package.json
appointment-service/: .dockerignore  .env  Dockerfile  README.md  requirements.txt
booking-service/: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  app.js  package-lock.json  package.json
dentist-service/: .env.example  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  go.mod  go.sum  sqlc.yaml
documentation/: README.md
entrypoint/: .gitignore  README.md  compose.dev.yaml  compose.yaml
notification-service/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml
notification-service/.githooks/: prepare-commit-msg
notification-service/migrations/2025-01-03-135702_create_notification_and_sent_notification/: down.sql  up.sql
notification-service/src/: main.rs
notification-service/src/app_http/: enums.rs
notification-service/src/app_mqtt/: client.rs  enums.rs  errors.rs  mod.rs  router.rs  utils.rs
notification-service/src/app_redis/: client.rs  util.rs
notification-service/src/app_ws/: schema.rs
notification-service/src/appointment/: router.rs  schema.rs
notification-service/src/config/: app.rs
notification-service/src/db/: connection.rs  crud.rs  models.rs  schema.rs
notification-service/src/notification/: router.rs  service.rs
notification-service/src/user/: interop.rs  mod.rs  router.rs  schema.rs  utils.rs
(+348 files in other folders)
